# glenda

./: README.md  blade_runner.py  blade_runner__coal_daily.py  blade_runner__coal_monthly.py  blade_runner__gas.py  blade_runner__platinum.py  blade_runner__silver_penoles.py  blade_runner__silver_polymetal.py  func.py  pyproject.toml
data/: data_load.py
data/raw/: angpy.xlsx  bhp.xlsx  coal.xlsx  coal_daily.xlsx  coalcompany_daily.xlsx  gas.xlsx  gas_company.xlsx  gold.xlsx  golden_company.xlsx  penoles.xlsx  platinum.xlsx  polymetal.xlsx  silver.xlsx
glenda/: blade_runner__gold.py  blade_runner__silver_polymetal.py
